add user and video model

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://Alex:your-password@alex.ntng6.mongodb.net
 CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=alex-codes
+ACESS_TOKEN_EXPIRY=1d
+REFERSH_TOKEN_SECRET=alex-code
+REFRESH_TOKEN_EXPIRY=10d
